--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -17,7 +17,7 @@ Here are just a few questions so I can get to know you and so you can get practi
 Where did you attend High School, and did you graduate? Compare english class to math, is one easier for you than the other? Finally which subject did you do the best in? Your answer should have at least two sentences devoted to each question.  
   
 ### my answer     
-  
+I graduated from Knight High School. English class is easier for me because math requires problem solving skills. I think I am better at reading comprehension than mathamatical skills. 
 
      
 
@@ -55,8 +55,7 @@ What do you want to achieve in life?  What college subject do you think would be
 Have you ever gone to foreign countries, if so which ones, if not Where might you go in the future?  Have you ever been in the military, if so which branch, if not which branch would you choose if you got drafted, and why?
 
 ### my answer     
-  
-   
+
   
 
 
@@ -68,8 +67,7 @@ What grade do you need to attain in stats to not upset your future plans, What i
  
 
 ### my answer     
-  
-   
+
  
 
 
