--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -26,12 +26,14 @@ I graduated from Knight High School. English class is easier for me because math
  For this class  you need a computer you can use at home.  So, what kind is it (windows, Apple, Linux)?  On a scale of 1 to 10, where 1 is a total dummy (doesn't know a mouse from a keyboard) and 10 is a complete geek (knows computer stuff in and out) How do you rate yourself?  You also need to have have internet access. How is your connection to the internet where you live?
 
 ### my answer   
+I use an apple Macbook Air. On a scale of 1 to 10 I would say I am a 4 on computer knowledge. I have pretty good internet access at home.   
 
 
 ## Others and You?   
 What name do you prefer to be called by your classmates and instructor, if your buddys call you something but you want people in the class to call you something else - what would that be? 
 
 ### my answer     
+I prefer to be called Eliana.   
 
  
 
