--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -44,6 +44,7 @@ I prefer to be called Eliana.
 What do you want to achieve in life?  What college subject do you think would be of the greatest interest to you? What degree or certificate are you trying to achieve?
 
 ### my answer     
+For now I would just like to get my bachelors degree. After a bachelors degree I would like to go to PA school.   
 
  
 
