--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -55,6 +55,7 @@ For now I would just like to get my bachelors degree. After a bachelors degree I
 Have you ever gone to foreign countries, if so which ones, if not Where might you go in the future?  Have you ever been in the military, if so which branch, if not which branch would you choose if you got drafted, and why?
 
 ### my answer     
+ I have been to Mexico. I plan on going to Mexico again but, this time I would like to go to my grandparents hometown. I would also like to go to Tokyo, Japan. I have not been in the military, but if I were to be drafted, I would choose the medical branch.  
 
   
 
