--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -68,6 +68,7 @@ What grade do you need to attain in stats to not upset your future plans, What i
  
 
 ### my answer     
+I am taking math 116. I am aware the math 116 counts for several transfer institutions. I need a letter A grade to attain my future goals.   
 
  
 
